--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,5 @@
-{{!-- The following component displays Ember's default welcome message. --}}
-{{welcome-page}}
-{{!-- Feel free to remove this! --}}
+<h2 id="title">Ember-Engines Demo</h2>
+
+{{#link-to "blog"}}Blog{{/link-to}}
 
 {{outlet}}
